# artrestorer

./: .gitignore  Dockerfile  Dockerfile.finetuning  README.md  app.py  bucket_access.py  local_inpaint_test.py  main.py  master_transfer.sh  pyproject.toml  setup_lama.sh  submit_training.py  train_info.csv  upload.py  upload_command.txt
destruct_images/: generate_dataset.py  overlay_transparent.py  teared.py  try_microsoft.py  upload_to_gcs.py
destruct_images/scripts/conversion/: make_transparent.py
destruct_images/scripts/experimentation/: fire.py  washed.py
scripts/: bucket_access.py  upload.py  upload_to_gcs.py
scripts/data_transfer/: master_transfer_with_swap.sh
scripts/dataset_generation/: generate_dataset.py  microsoft_code.py  overlay_transparent.py
scripts/dataset_generation/scripts/conversion/: convert_eps2png.py  make_fire_transparent.py
scripts/dataset_generation/scripts/experimentation/: teared_v2.py
templates/: index.html
training/: task.py
